[project]
name = "transformer-textbook"
version = "0.1.0"
description = "R7 4年プレ卒研"
readme = "README.md"
authors = [
    { name = "Haru Nakamura", email = "f22123@g.ichinoseki.ac.jp" },
    { name = "Itsuki Abe", email = "f22001@g.ichinoseki.ac.jp"},
    { name = "Koichiro Harashina", email = "f22131@g.ichinoseki.ac.jp" },
    { name = "Riku Miura", email = "f21151@g.ichinoseki.ac.jp"},
]
requires-python = ">=3.12"
dependencies = [
    "jupyter-book>=2.0.0a0",
]
